addFahrzeuge() uniqueness fix, csv parser and writer